--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </h1>
     <p style="margin-top: 0px; color: darkblue">
         <!-- we're setting the margin to 0px so the header and authour name are close together -->
-        Your Name | <a href="https://www.linkedin.com/in/finnmcevoy/">LinkedIn</a> | <a
+        Ellie Jones | <a href="https://www.linkedin.com/in/finnmcevoy/">LinkedIn</a> | <a
             href="https://www.github.com/FM-ds">GitHub</a>
     </p>
     <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
-        This HTML file provides a simple template for a portfolio page. It contains a header, a few sections, and a few charts. This header can act as a summary for your page.
+        Hello everyone. This is Ellie here. Please find below the charts I made from the Economics' Observatory Masterclass.
     </h3>
 
     <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
@@ -71,6 +71,16 @@
         <figure id="Location2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
     </section>
 
+    <section>
+      <div class="chart-description">
+          <h2>Section 3: Germany's Import Growth </h2>
+          <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+              We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+              As a first example, we're using the basic chart from the previous session.
+          </p>
+      </div>
+      <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+  </section>
     <!-- Do you want to add more sections? -->
         <!-- Try copying pasting the section above -->
         <!-- You'll need to change the id of the figure "<figure id="Location3"... -->
@@ -81,11 +91,14 @@
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
 
-        var figure_1_spec = "s2_chart1.json"; // We're storing the URL of the graph we want to display in a variable
+        var figure_1_spec = "chart1.json"; // We're storing the URL of the graph we want to display in a variable
         var figure_2_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json";
+        var figure_3_spec = "Germany_imports.json";
+
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
+        vegaEmbed('#Location3', figure_3_spec)
 
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
