--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
 
-        var figure_1_spec = "chart1.json"; // We're storing the URL of the graph we want to display in a variable
+        var figure_1_spec = "tree.json"; // We're storing the URL of the graph we want to display in a variable
         var figure_2_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json";
         var figure_3_spec = "Germany_imports.json";
 
