--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
             href="https://www.github.com/FM-ds">GitHub</a>
     </p>
     <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
-        Hello everyone. This is Ellie here. Please find below the charts I made from the Economics' Observatory Masterclass.
+        Hi everyone. This is Ellie here. Please find below the charts I discovered or made from the Economics' Observatory Masterclass.
     </h3>
 
     <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
     <section>
         <div class="chart-description">
-            <h2>Section 1: A basic chart</h2>
+            <h2>Example 1: A Sankey Diagram</h2>
             <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
-                As a first example, we're using the basic chart from the previous session.
+                This first chart is an example of a sankey diagram that was taken from the Making Data Visual Guide Book.
+                This is a chart in the future I would like to adapt to my own work in DBT.
+
             </p>
         </div>
         <figure id="Location1"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
