--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
       </div>
       <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
   </section>
+  <section>
+    <div class="chart-description">
+        <h2>Example 4: Interactive Map  </h2>
+        <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+            We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+            As a first example, we're using the basic chart from the previous session.
+        </p>
+    </div>
+    <figure id="Location4"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+    </section>
+    
     <!-- Do you want to add more sections? -->
         <!-- Try copying pasting the section above -->
         <!-- You'll need to change the id of the figure "<figure id="Location3"... -->
@@ -95,11 +106,13 @@
         var figure_1_spec = "tree.json"; // We're storing the URL of the graph we want to display in a variable
         var figure_2_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json";
         var figure_3_spec = "Germany_imports.json";
+        var figure_4_spec = "ch9_interactive_map.json";
 
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
         vegaEmbed('#Location3', figure_3_spec)
+        vegaEmbed('#Location4', figure_4_spec)
 
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
