--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
       </div>
       <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
   </section>
+    
   <section>
     <div class="chart-description">
         <h2>Example 4: Interactive Map  </h2>
         <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-            We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
-            As a first example, we're using the basic chart from the previous session.
+            This is an example of an interactive map.
         </p>
     </div>
     <figure id="Location4"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
